Rydder weld fra felles-db