@@ -3,6 +3,7 @@ package no.nav.vedtak.felles.testutilities.cdi;
 import java.lang.annotation.Annotation;
 import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 
 import javax.enterprise.inject.Instance;
 import javax.enterprise.util.TypeLiteral;
@@ -55,6 +56,6 @@ public class UnitTestLookupInstanceImpl<T> implements Instance<T> {
 
     @Override
     public Iterator<T> iterator() {
-        return Arrays.asList(get()).iterator();
+        return List.of(get()).iterator();
     }
 }
